Bug 519614 - Crash in QTextFrame::begin
Summary: Crash in QTextFrame::begin
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-crash (other bugs)
Version First Reported In: 6.6.4
Platform: Fedora RPMs Linux
: HI crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt-crash
: 515677 518479 519141 519553 521630 522098 523180 523509 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-04-30 14:56 UTC by Erin
Modified: 2026-07-26 21:15 UTC (History)
14 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.29
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/421649/


Attachments
Logs from running "plasmashell -n" and "plasmashell -d -n" while it was crashed. (27.20 KB, text/plain)
2026-04-30 14:56 UTC, Erin
Details
Backtrace from Plasma crash (96.26 KB, text/vnd.kde.kcrash-report)
2026-04-30 20:00 UTC, Erin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Erin 2026-04-30 14:56:00 UTC
Created attachment 191941 [details]
Logs from running "plasmashell -n" and "plasmashell -d -n" while it was crashed.

Operating System: Fedora KDE 43 
KDE Plasma Version: 6.6.4
KDE Frameworks Version: 6.25.0
Qt Version: 6.10.3
Kernel Version: 6.19.14-200.fc43.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 8 × 13th Gen Intel® Core™ i3-1315U
Memory: 16 GiB of RAM (15.3 GiB usable)
Graphics Processor: Intel® Graphics
Manufacturer: Framework
Product Name: Laptop 12 (13th Gen Intel Core)
System Version: A3

If the date is changed manually, the desktop will crash shortly after boot. After that it will crash immediately after it is started with `plasmashell`, and can get stuck trying to reboot itself.

In this case I set the date to 31/05/2026 and experience the issue.

Changing the date back to the current date (or using automatic time/date) fixes the issue after a restart.
Comment 1 TraceyC 2026-04-30 17:46:58 UTC
Thanks for the crash report. As the message at the top of the summary says, if something crashed, we need a backtrace of it so we can figure out what's going on. Can you please attach a backtrace of the crash, as detailed in https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports ?

Thanks.
Comment 2 Erin 2026-04-30 20:00:33 UTC
Created attachment 191948 [details]
Backtrace from Plasma crash
Comment 3 Erin 2026-04-30 20:01:06 UTC
(In reply to TraceyC from comment #1)

My apologies, I have attached the backtrace now. Hope it helps!
Comment 4 Nicolas Fella 2026-04-30 21:30:20 UTC
I don't see any tangible relation between the crash and changing the time. I'd be surprised if it's really related
Comment 5 Erin 2026-04-30 22:11:33 UTC
(In reply to Nicolas Fella from comment #4)
> I don't see any tangible relation between the crash and changing the time.
> I'd be surprised if it's really related

After further testing, it seems to only crash when connected to internet with a wrong time. If i turn wifi off, there are no issues. I can show a video of what I'm doing if that helps.
Comment 6 Erin 2026-04-30 22:55:43 UTC
I have recorded a video of the issue, and uploaded it here: https://www.errin.dev/Wrong-time-plasmashell-crash.mp4 
It is a slightly unusual one. My assumption is that a widget or app that has to contact the internet, and loads when plasmashell does is not liking having a significantly wrong time.
Comment 7 David Edmundson 2026-05-01 12:48:51 UTC
Pasting inline

Thread 1 (Thread 0x7f4074123f00 (LWP 2076)):
[KCrash Handler]
#4  0x00007f407bad2090 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::get (this=0x8) at /usr/src/debug/qt6-qtbase-6.10.3-1.fc43.x86_64/src/corelib/tools/qscopedpointer.h:113
#5  qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > > (ptr=...) at /usr/src/debug/qt6-qtbase-6.10.3-1.fc43.x86_64/src/corelib/global/qtclasshelpermacros.h:137
#6  QTextDocument::d_func (this=0x0) at /usr/src/debug/qt6-qtbase-6.10.3-1.fc43.x86_64/src/gui/text/qtextdocument.h:297
#7  QTextDocumentPrivate::get (document=0x0) at /usr/src/debug/qt6-qtbase-6.10.3-1.fc43.x86_64/src/gui/text/qtextdocument_p.h:275
#8  QTextDocumentPrivate::get (object=0x7f3fdc14e5a0) at /usr/src/debug/qt6-qtbase-6.10.3-1.fc43.x86_64/src/gui/text/qtextdocument_p.h:295
#9  QTextFrame::begin (this=this@entry=0x7f3fdc14e5a0) at /usr/src/debug/qt6-qtbase-6.10.3-1.fc43.x86_64/src/gui/text/qtextobject.cpp:589
#10 0x00007f407ba75c7d in QTextDocumentLayoutPrivate::layoutFrame (this=this@entry=0x7f3fdc058120, f=f@entry=0x7f3fdc14e5a0, layoutFrom=layoutFrom@entry=0, layoutTo=layoutTo@entry=0, frameWidth=..., frameWidth@entry=..., frameHeight=..., parentY=...) at /usr/src/debug/qt6-qtbase-6.10.3-1.fc43.x86_64/src/gui/text/qtextdocumentlayout.cpp:3028
#11 0x00007f407ba763fd in QTextDocumentLayoutPrivate::layoutFrame (this=this@entry=0x7f3fdc058120, f=f@entry=0x7f3fdc14e5a0, layoutFrom=layoutFrom@entry=0, layoutTo=layoutTo@entry=0, parentY=..., parentY@entry=...) at /usr/src/debug/qt6-qtbase-6.10.3-1.fc43.x86_64/src/gui/text/qtextdocumentlayout.cpp:2919
#12 0x00007f407ba7cb8b in QTextDocumentLayout::doLayout (this=this@entry=0x7f3fdc058100, from=from@entry=0, oldLength=oldLength@entry=1, length=length@entry=0) at /usr/src/debug/qt6-qtbase-6.10.3-1.fc43.x86_64/src/gui/text/qtextdocumentlayout.cpp:3838
#13 0x00007f407ba7e295 in QTextDocumentLayout::documentChanged (this=0x7f3fdc058100, from=0, oldLength=1, length=0) at /usr/src/debug/qt6-qtbase-6.10.3-1.fc43.x86_64/src/gui/text/qtextdocumentlayout.cpp:3801
#14 0x00007f407ba5123f in QTextDocumentPrivate::clear (this=0x7f3fdc055ee0) at /usr/src/debug/qt6-qtbase-6.10.3-1.fc43.x86_64/src/gui/text/qtextdocument_p.cpp:251
#15 0x00007f407ba33970 in QTextDocument::setPlainText (this=this@entry=0x7f3fdc055ec0, text=...) at /usr/src/debug/qt6-qtbase-6.10.3-1.fc43.x86_64/src/gui/text/qtextdocument.cpp:1271
Comment 8 David Edmundson 2026-05-01 12:49:37 UTC
*** Bug 515677 has been marked as a duplicate of this bug. ***
Comment 9 David Edmundson 2026-05-01 12:49:46 UTC
*** Bug 519141 has been marked as a duplicate of this bug. ***
Comment 10 TraceyC 2026-05-06 21:08:01 UTC
*** Bug 519553 has been marked as a duplicate of this bug. ***
Comment 11 TraceyC 2026-05-06 21:08:26 UTC
*** Bug 518479 has been marked as a duplicate of this bug. ***
Comment 12 Nate Graham 2026-07-16 18:44:02 UTC
*** Bug 522098 has been marked as a duplicate of this bug. ***
Comment 13 Nate Graham 2026-07-16 18:44:12 UTC
*** Bug 521630 has been marked as a duplicate of this bug. ***
Comment 14 TraceyC 2026-07-17 19:59:43 UTC
*** Bug 523180 has been marked as a duplicate of this bug. ***
Comment 15 Thibault Molleman 2026-07-18 07:25:05 UTC
My bug report was flagged as a duplicate and it does seem like it's the same bug, but it's interesting how it's triggered differently.
In my case (also happens to be a framework, but amd) I have it when resuming from standby). Interesting...
Comment 16 Méven 2026-07-18 09:22:27 UTC
Git commit dd40b4c0902dbcb470872d878d3387ab70b4bf62 by Méven Car, on behalf of Shouvik Kar.
Committed on 18/07/2026 at 09:22.
Pushed by meven into branch 'master'.

WidgetsAskUserActionHandler: show the SSL error dialog on the GUI thread

askIgnoreSslErrors() can be called from a non-GUI thread (e.g. the weather
ion runs its KIO jobs on a worker thread), where it constructed the
KMessageDialog off the GUI thread and crashed while painting it.

Marshal the dialog onto the GUI thread with QMetaObject::invokeMethod(qGuiApp,
...), like every other handler in this class already does.

M  +22   -20   src/widgets/widgetsaskuseractionhandler.cpp

https://invent.kde.org/frameworks/kio/-/commit/dd40b4c0902dbcb470872d878d3387ab70b4bf62
Comment 17 Nicolas Fella 2026-07-18 10:46:52 UTC
> I don't see any tangible relation between the crash and changing the time. I'd be surprised if it's really related

I guess the time change triggered an SSL error, and the crash happened whule handling that
Comment 18 Shouvik Kar 2026-07-18 15:04:09 UTC
Adding the MR link for reference, since it was not automatically picked up here. Most likely since bugzilla  was down when the MR was raised.
https://invent.kde.org/frameworks/kio/-/merge_requests/2312
Comment 19 Nate Graham 2026-07-26 21:15:52 UTC
*** Bug 523509 has been marked as a duplicate of this bug. ***