WidgetsAskUserActionHandler: show the SSL error dialog on the GUI thread

askIgnoreSslErrors() can be called from a non-GUI thread (e.g. the weather
ion runs its KIO jobs on a worker thread), where it constructed the
KMessageDialog off the GUI thread and crashed while painting it.

Marshal the dialog onto the GUI thread with QMetaObject::invokeMethod(qGuiApp,
...), like every other handler in this class already does.

BUG: 519614